# neptune-client

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  Dockerfile  MANIFEST.in  Makefile  README.md  SECURITY.md  cgrouptest.Dockerfile  codecov.yml  dev_requirements.txt  docs_requirements.txt  git_version.py  header.txt  neptune-client-api.ipynb  neptune-client-api.md  pylintrc  pyproject.toml  requirements.txt  run-e2e-tests.sh  sample.ipynb  setup.cfg  setup.py  some_file.txt  test_requirements.txt  tox.ini  versioneer.py
.github/: CODEOWNERS  SECURITY.md  codecov.yml  dependabot.yml  license_header.txt  neptune_client_pyproject.toml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: TEST-run-docker-only-tests.yml  chat-ops.yml  codeql.yml  dev-test-slack-notif.yml  dev1.x-e2e.yml  dev1.x-integrations.yml  dev1.x-unit.yml  e2e.yml  e2e_tests.yml  full-e2e.yml  full.yml  help-command.yml  integrations.yml  lint.yml  master.yml  merge_to_master.yml  minimal_e2e.yml  mypy.yml  neptune-client.yml  notif-test.yml  pre-commit-apply-command.yml  pre-commit.yml  publish.yml  pull_request.yml  release.yml  run-all-test-command.yml  run-docker-only-tests.yml  run-e2e-command.yml  run-integrations-command.yml  run-unit-command.yml  scheduled_e2e.yml  set-neptune-ref.yml  set_neptune_ref.yml  slash-commands.yml  test.yml  unit-in-pull-request.yml  unit-tests.yml  unit.yml
alpha_integration_dev/: common_client_code.py  new_client.py  old_client.py  old_client_noglobal.py  old_client_noglobal_deprecated_backends.py  tmp.py
alpha_integration_dev/data/: text.txt
api-reference/: neptune.rst  session.rst
cli/: __init__.py  main.py
cli/mlflow/: data_loader.py
cli/tf/: data_loader.py
dev_tools/: prepare_test_imports.py
docs/: 404.rst  conf.py  experiment.rst  index.rst  integrations.md  limits.rst  neptune.rst  notebook.rst  project.rst  session.rst  utils.rst
docs/technical_reference/: cheatsheet.rst  notebook.rst  project.rst  utils.rst
docs/tutorials/: advanced.rst  get-started.rst  larger.rst  minimal.rst  session-and-experiment.rst
e2e_tests/: base.py  conftest.py  exceptions.py  plot_utils.py  pytest.ini  utils.py
e2e_tests/integrations/: common.py  conftest.py  test_huggingface.py  test_lightning.py  test_pytorch_lightning.py  test_zenml.py  zenml_config.yaml
e2e_tests/management/: test_management.py
e2e_tests/neptune/: test_artifacts.py  test_base.py  test_copy.py  test_init.py  test_management.py  test_multiple_runs.py  test_series.py  test_sync.py
e2e_tests/standard/: _test_sync.py  test_artifacts.py  test_base.py  test_cli.py  test_copy.py  test_fetch_tables.py  test_files.py  test_init.py  test_legacy_client.py  test_multiple.py  test_multiple_runs.py  test_project.py  test_series.py  test_stage_transitions.py  test_sync.py
integrations/: README.md
integrations/lightgbm/: .gitattributes  MANIFEST.in  README.md  setup.cfg  setup.py
integrations/sklearn/: .gitattributes  MANIFEST.in  README.md  setup.cfg  setup.py
integrations/tensorflow-keras/: .gitattributes  MANIFEST.in  README.md  setup.cfg  setup.py
integrations/xgboost/: MANIFEST.in  README.md  setup.cfg  setup.py
neptune/: __init__.py  _version.py  api_exceptions.py  artifact_index.py  backend.py  checkpoint.py  client.py  constants.py  credentials.py  envs.py  exceptions.py  experiment.py  experiments.py  git_info.py  handler.py  model.py  notebook.py  oauth.py  patterns.py  project.py  projects.py  session.py  sessions.py  utils.py  variable.py  version.py
neptune/alpha/: __init__.py  cli.py  constants.py  envs.py  exceptions.py  experiment.py  experiments_table.py  handler.py  leaderboard.py  project.py  sync.py  test_sync.py  version.py
neptune/integrations/: sklearn.py
neptune/internal/: abort.py  async_operation_processor.py  backgroud_job_list.py  background_job.py  credentials.py  exceptions.py  experiment_structure.py  extended_experiment.py  image_utils.py  init_impl.py  neptune_backend.py  neptune_backend_mock.py  neptune_server.py  notebook.py  notebook_context.py  operation.py  operation_processor.py  operation_visitor.py  sync_neptune_backend_mock.py  sync_neptune_server_mock.py  sync_operation_processor.py  variable_setter_value_visitor.py
neptune/logging/: __init__.py  logger.py
neptune/management/: __init__.py  exceptions.py
neptune/new/: __init__.py  attribute_container.py  attributes_containers_table.py  cli.py  constants.py  envs.py  exceptions.py  experiment.py  experiments_table.py  handler.py  model.py  model_version.py  model_versions_table.py  project.py  run.py  runs_table.py  sync.py  version.py
neptune/types/: value.py  value_visitor.py
neptune/variables/: variable.py
neptune_cli/: main.py
neptune_client_package/: pyproject.toml
neptune_client_prototype/: __init__.py  experiment.py  experiment_view.py  path.py  test_Experiment.py  test_ExperimentView.py  test_Path.py  test_prototype.py  variable.py
neptune_client_prototype_tests/neptune_client_prototype/: __init__.py  test_experiment.py  test_experiment_view.py  test_prototype.py
neptune_old/: __init__.py  api_exceptions.py  exceptions.py  experiments.py  model.py  notebook.py  oauth.py  patterns.py  projects.py  sessions.py  utils.py
requirements/: docs_requirements.txt  e2e_requirements.txt  test_requirements.txt
src/neptune/: __init__.py  _version.py  api_exceptions.py  backend.py  checkpoint.py  constants.py  envs.py  exceptions.py  experiments.py  git_info.py  handler.py  model.py  notebook.py  oauth.py  patterns.py  progress_bar.py  projects.py  requirements.txt  sessions.py  table.py  tables.py  typing.py  utils.py  version.py
src/neptune_cli/: main.py
stubs/IPython/: __init__.pyi
stubs/packaging/: version.pyi
stubs/pynvml/: __init__.pyi  nvml.pyi
test_structure/: sample.py
tests/: cgrouptest.Dockerfile  utils.py
tests/cli/: test_cli.py
tests/e2e/: base.py  conftest.py  (+4 more)
tmp_docstring_playground/: docstring_playground.py
(+1581 files in other folders)
